[gd_scene load_steps=14 format=3 uid="uid://coo6nlfw8wbfq"]

[ext_resource type="Script" uid="uid://cr5v38b3xdu1u" path="res://button.gd" id="1_nhor4"]
[ext_resource type="Script" uid="uid://bqysmi7cjmdop" path="res://addons/godot-xr-tools/xr/start_xr.gd" id="3_0kkfq"]

[sub_resource type="BoxMesh" id="BoxMesh_lc4xp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0kkfq"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_0kkfq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mc1yv"]
albedo_color = Color(0.439118, 0.77988, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8x75a"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fetfg"]
size = Vector3(0.667114, 0.291077, 0.650726)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0kkfq"]
height = 0.0661926
radius = 0.250977

[sub_resource type="Animation" id="Animation_esgyd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.155216, 0)]
}

[sub_resource type="Animation" id="Animation_1bi7n"]
resource_name = "pressdown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.155216, 0), Vector3(0, 0.10966, 0)]
}

[sub_resource type="Animation" id="Animation_ql8su"]
resource_name = "pressup"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.10966, 0), Vector3(0, 0.155216, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rf4pk"]
_data = {
&"RESET": SubResource("Animation_esgyd"),
&"pressdown": SubResource("Animation_1bi7n"),
&"pressup": SubResource("Animation_ql8su")
}

[node name="Button" type="StaticBody3D"]
script = ExtResource("1_nhor4")

[node name="Base" type="MeshInstance3D" parent="."]
transform = Transform3D(0.669725, 0, 0, 0, 0.290374, 0, 0, 0, 0.647406, 0, 0, 0)
layers = 2
mesh = SubResource("BoxMesh_lc4xp")
surface_material_override/0 = SubResource("StandardMaterial3D_0kkfq")

[node name="Button" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.055, 0, 0, 0, 0.5, 0, 0.155216, 0)
layers = 2
mesh = SubResource("CylinderMesh_0kkfq")
surface_material_override/0 = SubResource("StandardMaterial3D_mc1yv")

[node name="ButCol" type="StaticBody3D" parent="Button"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button/ButCol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.002563, -4.76837e-07, -0.000837326)
shape = SubResource("CylinderShape3D_8x75a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00177002, -0.000152588, 0.00062561)
shape = SubResource("BoxShape3D_fetfg")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000144958, 0.179728, 0.00075531)
shape = SubResource("CylinderShape3D_0kkfq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rf4pk")
}

[node name="XRToolsStartXR" type="Node" parent="."]
script = ExtResource("3_0kkfq")
metadata/_custom_type_script = "uid://bqysmi7cjmdop"

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
